@@ -5,6 +5,7 @@
         - resources defined in Makefile
         - fixed possible IO deadlock with KorAP tokenizer
         - Simplified debugging by combining with X::C::T line numbers
+        - Support inline-tokens parameter
 
 0.03 2021-01-12
         - Update KorAP-Tokenizer to released 2.0 version
